--- a/Source/Mosa.Tool.Debugger/Properties/Resources.resx
+++ b/Source/Mosa.Tool.Debugger/Properties/Resources.resx
@@ -117,4 +117,122 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="zoom_layer" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\zoom_layer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="layer_export" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\layer_export.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="control_eject" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\control_eject.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="control_end" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\control_end.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="save_document" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAnxJREFUOE+dU9tOE1EULSIxvqBBREnUEjWCTxp5840f0A/QnzABLBg7LWjEEB6I
+        PhqSJqYNxGIvTAsRIxcJcisxFWobKr3gdDrTduiVFgrLc05bhAdi4kpW9j57Zq1z20fV8sqp3NQ7oOZ4
+        XNOOHaOaG8N1HY9mzimpTgIV/wuzGzKaON5YlhwHnZnC+jMCG6HdW4oWQoozTz6w+MUnoUnLm8qyv6BL
+        pZjYkDDpl/DZL7P4iYwpattHsXtwwPI5fwwtL5wjZWkJFYPpQAyzwTjmCOfDCSz9Vli917GGq8/taOy2
+        sXFzjwNlaQkVg29EtLClYJkI3dEUHhoWoOqwoFpjw+kuO6o0dqg6bajptqNWy6Ne78Sll07l0MAlJLEa
+        ScItprCp5KBqt2Be3MeMsMe+H8VXoQhXDMzk0GBdSsND6ItlIKbzbHZXdBen+nyIJbZhMtsYaU5r36U9
+        1HFkOxUDfzzDGFSy2N4pMIOJwA4a3/oRjSbwS1AYaU5rk6E86nRHDCKZPERCOVfA7n4RVZ0WDHuyuDMU
+        hGExgkBIZqQ5rZm9OdQfNTCvCfi4LsBO7n9qU0b1UyveuTNoM27h/vswWg1h3DOEWN5mDGPoR4acATFQ
+        lw2o2OaJgPeJmAnIqNFYMbhCbsMsYHi11BPAPkwuEQ9I7Y0rjYvUgLQo+zRKDCwesgKvyFZADfoWU3js
+        kBGPp6Dp4hCKJtkZPOIl9C+n0UANTnoLZ8l9v17KomMmDRQLGBzoR6FQQDGfQft0Cv0rOVzuIdd4+9nI
+        FDWhK6Gvj8ZbpNvUveNoID/QfZ7XjeOcfgK1HIlaBy6Qw6PiK5wzRZvxBmHr/1F19w+SM7ALQksnPAAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="font_red_delete" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\font_red_delete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="layer_delete" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\layer_delete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="page_refresh" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\page_refresh.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="layer_edit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\layer_edit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="control_equalizer" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\control_equalizer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="layer_redraw" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\layer_redraw.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="arrow_refresh" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\arrow_refresh.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="control_start" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\control_start.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="control_repeat" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\control_repeat.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="layer_open" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\layer_open.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="control_stop" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\control_stop.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="control_pause" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\control_pause.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="layer_remove" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\layer_remove.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="layer_group" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\layer_group.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="control_power" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\control_power.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="control_fastforward" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\control_fastforward.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="layer_create" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\layer_create.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="control_cursor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\control_cursor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="layer_save" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\layer_save.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="layer_add" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\layer_add.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="control_rewind" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\control_rewind.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="layer_import" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\layer_import.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="control_play" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\control_play.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="rocket" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\rocket.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="connect" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\connect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="page_gear" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\page_gear.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="application_view_columns" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\application_view_columns.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="application_view_list" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\application_view_list.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="document_inspect" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\document_inspect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
