--- a/Source/Mosa.Tool.Debugger/Views/OutputView.resx
+++ b/Source/Mosa.Tool.Debugger/Views/OutputView.resx
@@ -112,52 +112,15 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="saveFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral">
+  <metadata name="saveFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>122, 17</value>
   </metadata>
-  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral">
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
-  </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral" />
-  <data name="toolStripButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJQSURBVDhPhVNfSFNRHD4VCQ4qyEoi8S0iiQiUoOcKgp4K
-        qode6iEi8iWoh5b20nP1UGrtrhdTR9vudq9L2dS0bLoyBwaLnOVy/3Sbu5ttc7WN9XXO2R1Lm/jBx++c
-        3/l93/mdwzlEttmSoiTBbLHAtIYij6LVCoskxchGYAWbIRqNwiyKfapkLdjODD8W/AgGAgiFgggFg/D7
-        /Tz/sreXx8jSEsxWq0GVVcDaZAiHF9EpTeJ5/wdKFzosEzzfY+hDvlDgY9YJPa5ZlZZgEkV1MYKksozU
-        isKp0DHDlNtNTQzoVjuhXUCVllA2UOJxdMku6F5/hG7gEzoH3Ty/HsZ+W3WDZDKJTDqF39kMfuVzyLuG
-        ETy0B8qZo4jPTGE5neV1hqGR6gZpKmYdCIPTEOxu6CQnZjTbkXjQhm8XTmElneZ1r+wOROqJosorBtnV
-        VRTozn/YpPshPfwI8trr8BCC2JWLULQ3eN1cSwNcdVuMqrxikM/l0DUwDb08Ab35LQTndzp24sX4LCb3
-        1mHx3EnEjjfA03KQHaGxpKYoGxSLRSARAR7fAZ7cBZ5qgY57fC3n8+Ir7WR+B4Gz/fa6O1DfAcMzvRU6
-        8T2E0S8Q3s1CEMfhaGtH5tZl+A7UYr75CObqa7DQqNmvyulTpv9gQ9iNyGqvIXSiCeHzZ3nKcV8L3y5S
-        6cIkyyn2H9iTZhStNEoyjz9PH0as9So+byWwDA1DfDOKnrEx7yNCbnr31SRUC3KMsrkaA7sJPJptaCXk
-        0j/5JsqdlEy3KcqiWj77D4T8BdxOUoRsbP/eAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="toolStripButton2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ9SURBVDhPnVPfT1JhGMbMtW6omVluFa5a5lUt77rzH6g/
-        oP6JNjS0xRGtZXNeuLpsbmxNpgtD8IAsW4o58xeukRJMEsEOh3OAo/wSEHz6vg80vXBtPduz9/3ec57n
-        +/V+quZXDuWmwQ4Nx+OafvwYNdw4rnfxaOIckuokUPG/MLMuo5HjhyqS46AzU4z9jMBKaPOVo4WQ4syT
-        Dyx+8Uto1POmiuwv6FIpnOsSJgMSPgdkFj+RMYVaO4rC/j7LZwMx3H7hGKlIyzgwmA7GMLMZxyzhXDiB
-        xd8Kq/fYV3H1uQ0NnVY2buq2oyIt48DgGxHNbylYIkJPNImHxnmo2iyo1llxusOGKp0NqnYrajptUOt5
-        1BkcuPTSoRwauIUdrER24BGT2FCyUGktmBNLcAl77PtRfBWKcMfATA4N1qQUvIT+WBpiKsdmd0cLONXr
-        RyyxDZPZykhzWvsu7aGWI9s5MAjE04ybSgbbu3lm4AzuouFtANFoAr8EhZHmtDYZyqG264hBJJ2DSChn
-        8yiUiqhqt2DYm8GdwU0YFyIIhmRGmtOa2ZdF3VED86qAj2sCbOT+pzZkVD8dwztPGq1DW7j/PowWYxj3
-        jCGWtw6FMfgjTc6AGGgqBlRs9UbA+0W4gjJqdGMYWCa3YRYwvFLuCaAEk1vEA1J7407hIjUgLco+jRID
-        i5eswCeyFVCD3oUkHttlxONJ6Do4hKI77Awe8RL6llKopwYnvYWz5L5fL2bQ5koBxTwG+vuQz+dRzKWh
-        nU6ibzmLy93kGpufjUxRE7oS+vpovEW6TdMzgXryA93n+a4JnDM4oeZI1NtxgRweFV/hHEnajDcIW/6P
-        qrt/AJZCsAzu9qEzAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>54</value>
   </metadata>
 </root>
